--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Justin Belzile",
+  "author": "jpbel",
   "license": "UNLICENSED",
   "devDependencies": {
     "jasmine": "^2.6.0",
